[WIP] Mostly animated the header nav components so people get some responsiveness on hover. A couple clipping issues that still need work though

--- a/petitions/static/global.css
+++ b/petitions/static/global.css
@@ -308,8 +308,16 @@ nav .margin-right{
     text-decoration: none;
     color: #fff;
 }
-#about-link i{
-    margin-right: 0.5em;
+.header-link{
+    margin: 0 0.1em 0 0.4em;
+}
+.header-link:hover {
+    transform:scale(1.1);
+    transition: transform 0.1s ease-in;
+}
+
+.header-nav {
+    margin: 0 5em 0 0;
 }
 #user-menu{
     position: relative;
@@ -380,7 +388,7 @@ nav .margin-right{
     padding-top: 7px;
     height: 63px;
 }
-#about{
+.header-link-wrapper{
     margin-top: 3px;
 }
 .small-header #menu{
@@ -459,7 +467,7 @@ header.small-header #menu-content:hover #account-dropdown{
     #sg-nav{
         display: none;
     }
-    #about{
+    .header-link-wrapper{
         display: none;
     }
     #menu-content{
